Atualização no arquivo index.html

--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
     <!-- Adicionando comentário oculto -->
     <script src="app.js"></script>
     
+    <p>Testando o código</p>
+    
 </body>
 </html>
