--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>Verificação de par ou ímpar</h1>
     <!-- Adicionando comentário oculto -->
     <script src="app.js"></script>
+    <h2>Adicionar o título 2</h2>
     
     <p>Testando o código</p>
     ...
