Alterando vários arquivos

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!-- Adicionando comentário oculto -->
     <script src="app.js"></script>
     <h2>Adicionar o título 2</h2>
+    <h2>Adicionar o título 32</h2>
     
     <p>Testando o código</p>
     ...
