Alteração do html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Verificação de par ou ímpar</h1>
     <!-- Adicionando comentário oculto -->
+	<!-- Adicionando comentário oculto -->
     <script src="app.js"></script>
     
     <p>Testando o código</p>
