Alterando vários arquivos

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>Verificação de par ou ímpar</h1>
+<h1>Verificação de par ou ímpar</h1>
+<h1>Verificação de par ou ímpar</h1>
     <!-- Adicionando comentário oculto -->
 	<!-- Adicionando comentário oculto -->
     <script src="app.js"></script>
